<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_loading" />

    <Button
        android:id="@+id/btnError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_error" />

    <Button
        android:id="@+id/btnEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_empty" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.zhan.mvvm.widget.EmptyView
        android:id="@+id/mEmptyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_20" />
</LinearLayout>